# NES-EM

./: .gitignore  AGENTS.md  CMakeLists.txt  MakeFile  log.txt  logs.txt  out.txt  test_fix.bat  test_zelda.bat  tmp.txt
src/: ExecutionInfo.h  addressingModes.c  addressingModes.h  bus.c  bus.h  cartriadge.c  cartriadge.h  controller.c  controller.h  controllerKeys.h  cpu.c  cpu.h  instructions.c  instructions.h  main.c  mapper.c  mapper.h  ppu.c  ppu.h  registerOffsets.h  statusFlag.h
src/core/: ControllerKeyStates.h  ExecutionInfo.h  addressing_modes.c  audio.c  audio.h  bus.c  bus.h  cartriadge.c  cartriadge.h  controller.c  controller.h  cpu.c  cpu.h  frameData.h  instructions.c  instructions.h  mapper.c  mapper.h  nesColor.h  nesMem.c  ppu.c  ppu.h  registerOffsets.h  statusFlag.h  sys_palette.h
src/core/mappers/: m000.c  m000.h  m001.c  m001.h  m002.c  m002.h  m003.c  m003.h  m004.c  m004.h  m005.c  m005.h  m006.c  m006.h  m007.c  m007.h  m011.c  m011.h  m023.c  m023.h  m034.c  m034.h  m066.c  m066.h  m069.c  m069.h  mapper-reference.md  mappers.h
test/: immediate.c
web/: controls.js  game.js  index.html  output.js  output.wasm  style.css
